# program-engineer-gpt

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ca_gpt.py  chroma_loader.py  codeengineergpt.py  index_repo.py  main.py  programengineergpt.py  pyproject.toml  query_tool.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  update_docs.md  user_story.md
codeengineergpt/: __init__.py  __main__.py  code_engineer.py  config.py
codeengineergpt/agents/: actions.py  ai.py
codeengineergpt/core/: analyzer.py  developer.py  embedder.py  loader.py
codeengineergpt/prompts/: intro.py  sys  system
codeengineergpt/tools/: code_loader.py
codeengineergpt/utils/: args.py  cli.py  colors.py  display.py  input.py
docs/: input.py
programengineergpt/: __init__.py  __main__.py  config.py  main.py  program_engineer.py
programengineergpt/agents/: __init__.py  actions.py  ai.py  chatbot.py
programengineergpt/core/: __init__.py  analyzer.py  chatbot.py  developer.py  embedder.py  loader.py  retriever.py  splitter.py
programengineergpt/prompts/: build_chat_prompt.py  build_user_prompt.py  chat.py  code_dependencies.py  code_design.py  code_requirements.py  code_tests.py  code_writer.py  intro.py  project_design.py  (+3 more)
src/: __init__.py  __main__.py  args.py  code_assistant.py  config.py  test.env
test/: chat_history.txt  project_instructions.txt
test_proj/: project_instructions.txt
tests/: test_config.py  test_embedder.py  test_load_and_split.py  test_loader.py  test_splitter.py
ui/: app.py
(+27 files in other folders)
