[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "pgpt"
version = "0.6.9"
description = "ProgramEngineerGPT is an interactive command line tool that leverages the power of AI to assist developers with code comprehension, exploration, and generation. It serves as a virtual assistant that can analyze codebases, answer queries about code, and even help in setting up new coding projects."
authors = [
    { name = "Brette Geary", email = "hackedbg@outlook.com" },
]
readme = "README.md"
homepage = "https://github.com/hackedbyagirl/programengineergpt"
license = "GPL-3.0"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
